[project]
name = "Thoth purge-job"
description = "Purging old data out of a Thoth deployment"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
